Local guide benefits page

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                 </div>
             </div>
         </div>
+
+        <!-- New Section Linking to Local Guides Benefits Page -->
+        <div class="info-section">
+            <h2>Why Choose Local Guides?</h2>
+            <p>Learn more about the unique advantages of trekking with local guides over larger trek companies.</p>
+            <a href="local-guides-benefits.html" class="learn-more">Learn More</a>
+        </div>
     </div>
 </body>
 </html>
