Added texg msg wiget for testng purposes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Himalayan Trek Guides</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<script src="https://app.boei.help/embed/k/821ef24c-ef11-4626-aec1-1e8f4a12a116" async></script>
 <body>
     <header>
         <h1>Himalayan Trek Guides</h1>
