--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <body>
     <header>
         <h1>Himalayan Trek Guides</h1>
-        <p>Find the best local guides for your Himalayan adventures</p>
+        <h3>Find the best local guides for your Himalayan adventures</h3>
     </header>
+
+    <div class="global-note">
+        <p>If a guide is not reachable by phone, they might be on a trek. Please send a text message, and they will get back to you.</p>
+    </div>
 
     <div class="container">
         <div id="guides" class="guide-list">
