--- a/local-guides-benefits.html
+++ b/local-guides-benefits.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Why Choose Local Guides?</h1>
-        <p>Discover the benefits of trekking with local guides in the Himalayas</p>
+        <h3>Discover the benefits of trekking with local guides in the Himalayas</h3>
     </header>
 
     <div class="container">
